# roomie

./: .gitignore  README.md  caos.lua  conf.lua  geometry.lua  index.html  main.js  main.lua  metaroom.lua  package.json  room.lua  styles.css  ui.lua
.github/workflows/: main.yml
loveframes/: init.lua
loveframes/libraries/: utils.lua
loveframes/objects/: base.lua  grid.lua  tabs.lua  text.lua
loveframes/objects/internal/: tooltip.lua
loveframes/objects/internal/multichoice/: multichoicerow.lua
nativefs/: nativefs.lua
script/: api.js  blk.js  caos.js  favplace.js  geometry.js  menu.js  metaroom.js  panel.js  preload.js  room.js  sketch.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: blk.rs  c16.rs  caos.rs  config.rs  file.rs  format.rs  frontend.rs  geometry.rs  history.rs  main.rs  metaroom.rs
src-tauri/src/format/: blk.rs  c16.rs
src-tauri/src/metaroom/: corner.rs  door.rs  favicon.rs  link.rs  overlay.rs  room.rs  side.rs
testfiles/: test.cos
ui/: index.html
ui/script/: canvas.js  caos.js  commands.js  constraints.js  door.js  favicon.js  geometry.js  input.js  keyboard.js  link.js  main.js  metaroom.js  mouse.js  movement.js  overlay.js  room.js  selection.js  sidebar.js  smell.js  theme.js  toolbar.js  ui.js
ui/script/sidebars/: cornersidebar.js  doorsidebar.js  faviconsidebar.js  linksidebar.js  metaroomsidebar.js  overlaysidebar.js  roomsidebar.js  sidesidebar.js
ui/style/: style.css
